--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <!-- SEO acisindan önemli (165 karakter uzunluğunda bir aciklama) -->
     <meta name="description" content="Dünyanın en iyi kalemleri cw-kalem">
     <link rel="shortcut icon" href="./assets/7611770.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    
+    <style>
+.par{
+    color: white;
+    background-color: red;
+}
+
+    </style>
+
     <title>Recap</title>
 </head>
 <body>
@@ -15,5 +25,11 @@
     <h4>Bu bir H4 etiketidir.</h4>
     <h5>Bu bir H5 etiketidir.</h5>
     <h6>Bu bir H6 etiketidir.</h6>
+
+    <div>
+        <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, aliquid magnam placeat et commodi nulla eveniet expedita sit dolorum voluptatum atque, mollitia error enim. Veritatis facere nostrum dolores tenetur error.</p>
+        <p style=color:green>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, aliquid magnam placeat et commodi nulla eveniet expedita sit dolorum voluptatum atque, mollitia error enim. Veritatis facere nostrum dolores tenetur error.</p>
+        <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, aliquid magnam placeat et commodi nulla eveniet expedita sit dolorum voluptatum atque, mollitia error enim. Veritatis facere nostrum dolores tenetur error.</p>
+    </div>
 </body>
 </html>
