--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     color: white;
     background-color: red;
 }
-
+#container{
+    border: 2px solid yellowgreen;
+}
     </style>
 
     <title>Recap</title>
@@ -26,7 +28,7 @@
     <h5>Bu bir H5 etiketidir.</h5>
     <h6>Bu bir H6 etiketidir.</h6>
 
-    <div>
+    <div id="container">
         <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, aliquid magnam placeat et commodi nulla eveniet expedita sit dolorum voluptatum atque, mollitia error enim. Veritatis facere nostrum dolores tenetur error.</p>
         <p style=color:green>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, aliquid magnam placeat et commodi nulla eveniet expedita sit dolorum voluptatum atque, mollitia error enim. Veritatis facere nostrum dolores tenetur error.</p>
         <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, aliquid magnam placeat et commodi nulla eveniet expedita sit dolorum voluptatum atque, mollitia error enim. Veritatis facere nostrum dolores tenetur error.</p>
