--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- SEO acisindan önemli (165 karakter uzunluğunda bir aciklama) -->
     <meta name="description" content="Dünyanın en iyi kalemleri cw-kalem">
     <link rel="shortcut icon" href="./assets/7611770.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stil.css">
     
     <style>
 .par{
@@ -33,5 +33,13 @@
         <p style=color:green>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, aliquid magnam placeat et commodi nulla eveniet expedita sit dolorum voluptatum atque, mollitia error enim. Veritatis facere nostrum dolores tenetur error.</p>
         <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, aliquid magnam placeat et commodi nulla eveniet expedita sit dolorum voluptatum atque, mollitia error enim. Veritatis facere nostrum dolores tenetur error.</p>
     </div>
+    <section>
+        Lorem ipsum dolor sit amet <u>consectetur</u> <strong>adipisicing</strong> elit. Possimus <mark>nihil</mark> similique velit <del>illum</del> reprehenderit rem ex non ut <em>autem</em> nam.
+    </section>
+<br/>
+    <article>
+        Bu ürünün fiyatı <span style="color:red"> TL</span>
+
+    </article>
 </body>
 </html>
