--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
     </section>
 <br/>
     <article>
-        Bu ürünün fiyatı <span style="color:red"> TL</span>
+        Bu ürünün fiyatı <span style="color:red">500 TL</span>
 
     </article>
+
+    <p>Suyun formülü H<sub>2</sub>O</p>
+    <p>Formül x<sup>2</sup>+3</p>
 </body>
 </html>
