--- a/links.html
+++ b/links.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>links</title>
 </head>
-<body>
+<br>
     <h1>LINKS</h1>
+
+    <a href="https://google.com" target="_blank">Google Web Site</a>
+</br>
+    <a href="index.html" target="_blank">Birinci Calisma</a>
 </body>
 </html>
