--- a/links.html
+++ b/links.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<br lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,5 +11,15 @@
     <a href="https://google.com" target="_blank">Google Web Site</a>
 </br>
     <a href="index.html" target="_blank">Birinci Calisma</a>
+</br>
+    <a href="https://google.com"><img src="https://cdn.pixabay.com/photo/2023/03/29/19/32/man-7886201_640.jpg" alt="nature img" width="300px"/></a>
+<div>
+    <img src="./assets/cat-8361048_1280.webp" width="300px" alt="cat image"/>
+</div>
+
+<a href="./assets/cat-8361048_1280.webp">Resmi İndirmek İçin Tıklayınız</a>
+ 
+<p><a href="tel:+90555555">Ara 9055555</a> </p>
+<p><a href="mailto:burak1845turk@icloud.com">Mail icin tiklayiniz</a> </p>
 </body>
 </html>
