--- a/links.html
+++ b/links.html
@@ -6,7 +6,7 @@
     <title>links</title>
 </head>
 <br>
-    <h1>LINKS</h1>
+    <h1 id="baslangic">LINKS</h1>
 
     <a href="https://google.com" target="_blank">Google Web Site</a>
 </br>
@@ -21,5 +21,15 @@
  
 <p><a href="tel:+90555555">Ara 9055555</a> </p>
 <p><a href="mailto:burak1845turk@icloud.com">Mail icin tiklayiniz</a> </p>
+
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam quisquam rerum doloremque nesciunt non, molestiae pariatur maiores itaque, vitae vel laudantium, officiis alias suscipit debitis commodi eaque rem? Nisi, rem doloremque. Odio eum quas aliquam! Nihil temporibus rerum, nam culpa ad excepturi similique fugit error sed libero inventore vel delectus voluptatibus officia quidem aspernatur quos vero iste odit? Modi corporis nesciunt sit delectus quae cupiditate id, aut exercitationem officiis, at maxime reiciendis adipisci? Exercitationem autem ex debitis, explicabo inventore sed beatae soluta nihil ducimus amet, hic id rerum sint. Adipisci quae dolores totam quisquam. Ducimus, similique! Alias repudiandae quasi temporibus eos beatae, reiciendis velit omnis, autem dolore doloremque recusandae. Velit repudiandae veritatis earum aliquam, reiciendis rerum totam inventore architecto? Voluptates, ut dolorum. Quod optio asperiores, dolores beatae non ad, modi iusto consequatur molestias id hic eum voluptate quia accusamus magni consequuntur voluptas, saepe animi quas corporis incidunt laudantium sint. Perferendis nulla dolorum eaque, assumenda ut adipisci dolor similique sapiente distinctio et rem est optio in iste? Eligendi eius nostrum voluptatem eum pariatur molestias quae quo sequi dolorem reiciendis recusandae id maiores, magnam totam veniam neque nihil amet accusamus velit repellendus rerum reprehenderit mollitia nemo praesentium! Non tempora dolore mollitia deserunt!</p>
+</br>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam quisquam rerum doloremque nesciunt non, molestiae pariatur maiores itaque, vitae vel laudantium, officiis alias suscipit debitis commodi eaque rem? Nisi, rem doloremque. Odio eum quas aliquam! Nihil temporibus rerum, nam culpa ad excepturi similique fugit error sed libero inventore vel delectus voluptatibus officia quidem aspernatur quos vero iste odit? Modi corporis nesciunt sit delectus quae cupiditate id, aut exercitationem officiis, at maxime reiciendis adipisci? Exercitationem autem ex debitis, explicabo inventore sed beatae soluta nihil ducimus amet, hic id rerum sint. Adipisci quae dolores totam quisquam. Ducimus, similique! Alias repudiandae quasi temporibus eos beatae, reiciendis velit omnis, autem dolore doloremque recusandae. Velit repudiandae veritatis earum aliquam, reiciendis rerum totam inventore architecto? Voluptates, ut dolorum. Quod optio asperiores, dolores beatae non ad, modi iusto consequatur molestias id hic eum voluptate quia accusamus magni consequuntur voluptas, saepe animi quas corporis incidunt laudantium sint. Perferendis nulla dolorum eaque, assumenda ut adipisci dolor similique sapiente distinctio et rem est optio in iste? Eligendi eius nostrum voluptatem eum pariatur molestias quae quo sequi dolorem reiciendis recusandae id maiores, magnam totam veniam neque nihil amet accusamus velit repellendus rerum reprehenderit mollitia nemo praesentium! Non tempora dolore mollitia deserunt!</p>
+
+
+<a href="#baslangic">Başa Git</a>
+
 </body>
+
+
 </html>
